<?xml version="1.0"?>
<package>
  <name>system_suitesparse</name>
  <version>0.0.1</version> 
  <description>CMake scripts finding system suitesparse library</description>
  <maintainer email="developers@sevensense.ch">Sevensense developers</maintainer>
  <license>closed</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
